--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,7 @@ body {
 }
 h1 {
     font-family: Garamond;
-    font-size: 20pt;
+    font-size: 30pt;
 }
 #menu {
     font-family: Georgia;
@@ -20,7 +20,7 @@ h1 {
 }
 .info1 a {
     border: 4px solid forestgreen;
-    
+
     margin-bottom: auto;
 }
 
@@ -109,6 +109,16 @@ div.barva{
     font-size: 15pt;
     margin-left: 790px;
 }
+#info {
+    margin: 12px 0 6px 4px;
+}
+.kon{
+    margin: 12px 0 2px 4px;
+}
+.tel h4 {
+    margin: 12px 0 6px 4px;
+}
+
 
 .detail-title {
 color: skyblue;
