--- a/css/style.css
+++ b/css/style.css
@@ -102,3 +102,8 @@ div.barva{
 .detail-title {
 color: skyblue;
 }
+
+.stred {margin: 0 auto;display: block}
+
+.balii {margin-top: 40px;
+margin-bottom: 40px}
