--- a/css/style.css
+++ b/css/style.css
@@ -7,22 +7,32 @@ body {
     font-family: Georgia;
 
 }
-h1 {
+.header img {
+    width: 80px;
+    margin-left: 12px;
+    margin-top: 4px;
+}
+.header a {
     font-family: Garamond;
-    font-size: 30pt;
+    color: rgba(221, 169, 68, 1);
+    font-size: 70pt;
+    text-decoration: none;
+    margin-left: 20px;
+    margin-top: 16px;
 }
 #menu {
     font-family: Georgia;
-    font-size: 12pt;
+    font-size: 20pt;
+
+}
+#menu a {
+    text-decoration: none;
+    color: white;
 }
 #menu ul {
     text-align: center;
 }
-.info1 a {
-    border: 4px solid forestgreen;
 
-    margin-bottom: auto;
-}
 
 #menu li {
     color: white;
@@ -34,12 +44,9 @@ h1 {
 
 .left {
     float: left;
+    margin-left: 12px;
 }
-.right {
-    float: left;
-}
-.medium {
-    float: left;
+
 }
 #header img {
 
@@ -85,11 +92,12 @@ div.barva{
 
 .upot {
     padding: 10px 0px 0px 12px;
+    border-bottom: 3px solid #dda944;
 }
 
 .upot h2 {
     padding: 6px;
-
+    color: royalblue;
 
 
     /*float: right;*/
@@ -97,9 +105,25 @@ div.barva{
 }
 
 .upot img {
-    width: 730px;
-    height: 300px;
+    width: 700px;
+    height: 290px;
     /*padding: ;*/
+}
+
+.upot a {
+    text-decoration: none;
+    color: royalblue;
+}
+
+.upot a.zajem {
+    background-color: green;
+    text-decoration: none;
+    color: white;
+    padding: 6px;
+    margin-top: 12px;
+    margin-right: 10px;
+    display: block;
+    float: right;
 }
 
 
