--- a/css/style.css
+++ b/css/style.css
@@ -2,13 +2,16 @@
     padding: 0;
     margin: 0;
 }
+
 body {
- background-color: rgba(255, 209, 17, 0.38);
+    background-color: rgba(255, 209, 17, 0.38);
 
 }
+
 h1 {
     font-family: Garamond;
 }
+
 #menu ul {
     text-align: center;
 }
@@ -20,38 +23,44 @@ h1 {
     padding: 0px 35px;
 }
 
-
 .left {
     float: left;
 }
+
 .right {
     float: left;
 }
+
 .medium {
     float: left;
 }
+
 #header img {
 
 }
+
 .b {
     /*margin-top: 40px;*/
     padding: 12px;
     text-align: right;
 
 }
+
 .b h3 {
     border: 2px solid greenyellow;
     width: 200px;
 }
+
 .clean {
     clear: left;
 }
-div.barva{
-     background: rgba(65, 105, 225, 0.76);
 
+div.barva {
+    background: rgba(65, 105, 225, 0.76);
 
- }
-.zac{
+}
+
+.zac {
     margin: 0 auto;
     /*border: 10px solid white;*/
     /*width: 640px;*/
@@ -59,12 +68,13 @@ div.barva{
     background-color: white;
     position: relative;
 }
+
 .zac img {
     /*border: 10px solid white;*/
-    width: 100%;/*width: 640px;*/
-
+    width: 100%; /*width: 640px;*/
 
 }
+
 .zac .perex {
     position: absolute;
 
@@ -79,7 +89,6 @@ div.barva{
 .upot h2 {
     background-color: #ff9fc1;
     padding: 4px;
-
 
     /*float: right;*/
     /*margin: 0px auto 6px auto;*/
@@ -100,10 +109,23 @@ div.barva{
 }
 
 .detail-title {
-color: skyblue;
+    color: royalblue;
+    text-align: center;
 }
 
-.stred {margin: 0 auto;display: block}
+/*.h{*/
+    /*width: 50%;*/
+    /*margin: auto;*/
+    /*display: block;*/
+/*}*/
 
-.balii {margin-top: 40px;
-margin-bottom: 40px}
+.stred {
+    width: 800px;
+    margin: auto;
+    display: block
+}
+
+.popis {
+    margin-top: 40px;
+    margin-bottom: 40px
+}
