--- a/css/style.css
+++ b/css/style.css
@@ -131,9 +131,16 @@ div.barva {
     margin-bottom: 40px
 }
 .obednat {
-    border: 3px solid rgba(56, 105, 225, 0.76);
+
 background:rgba(56, 105, 225, 0.76);
     text-align: center;
     padding-top: 4px;
 padding-bottom: 4px;
+}
+
+.pata {
+    background:rgba(56, 105, 225, 0.76);
+    text-align: center;
+    padding-top: 4px;
+    padding-bottom: 4px;
 }
