--- a/css/style.css
+++ b/css/style.css
@@ -111,6 +111,7 @@ div.barva {
 .detail-title {
     color: royalblue;
     text-align: center;
+    font-family: Georgia;
 }
 
 /*.h{*/
@@ -128,7 +129,8 @@ div.barva {
 
 .popis {
     margin-top: 40px;
-    margin-bottom: 40px
+    margin-bottom: 40px;
+    font-family: Georgia;
 }
 .obednat {
 
